fix the website on mobile devices

--- a/sass/style.sass
+++ b/sass/style.sass
@@ -1,3 +1,5 @@
+@charset "UTF-8"
+
 // 顏色
 $blue_color: #3A0088
 $white_color: #ffffff
@@ -57,7 +59,7 @@ header
 // 內容區塊
 .list
   max-width: 650px
-  min-width: 280px
+  // min-width: 280px
   margin: 120px auto 100px auto
   padding: 15px
   background-color: $white_color
@@ -84,7 +86,7 @@ header
 
 .list.mini
   max-width: 850px
-  min-width: 280px
+  // min-width: 280px
   margin: 80px auto 150px auto
   font-size: $intro_size
   background-color: $grey_color
